<resources>
    // App values
    <string name="app_name">Get Fit or Die Fryin</string>

    // Login / SignUp
    <string name="login_text">Login</string>
    <string name="signUp_text">SignUp</string>
    <string name="signUp_link_text">No account yet? Create one</string>

    // Google
    <string name="google_client_id">17159580166–89dc5n00khi89edcnjmt2ua4p7nin0d1.apps.googleusercontent.com</string>

    <string name="step_counter">
         android.hardware.sensor.stepcounter
    </string>
    <string name="step_detector">
         android.hardware.sensor.stepdetector
    </string>
    <string name="facebook_application_id" translatable="false">207303182991184</string>
    <string name="fb_login_protocol_scheme">fb808105053007097</string>
    <string name="facebook_app_id">808105053007097</string>
    <string name="action_settings">Settings</string>
    <string name="txt1">Linked Account</string>
    <string name="txt2">Refer A Friend</string>
    <string name="txt3">Rate The App</string>
    <string name="txt4">Feedback</string>
    <string name="txt5">Settings</string>
    <string name="txt6">Sample</string>
    <string name="basic1">Name</string>
    <string name="nameDB">Conor Ryan</string>
    <string name="nameHint">Enter name</string>
    <string name="basic2">Phone Number</string>
    <string name="phoneDB">085-115-8700</string>
    <string name="phoneHint">Enter Phone Number</string>
    <string name="basic3">Gender</string>
    <string name="basic3radio1">Male</string>
    <string name="basic3radio2">Female</string>
    <string name="basic4">Age</string>
    <string name="ageHint">Enter Age</string>
    <string name="ageDB">22</string>
    <string name="basic5">Height</string>
    <string-array name="HeightDropDownFt">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="ftHint">Ft</string>
    <string-array name="HeightDropDownIn">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="inHint">In</string>
    <string name="basic6">Weight</string>
    <string name="weightHint">Enter Weight</string>
    <string-array name="weightDropDown">
        <item>Kgs</item>
        <item>Lbs</item>
    </string-array>
    <string name="text1">Enter the information</string>
    <string name="text2">Steps</string>
    <string name="text3">Calories</string>
    <string name="text4">Frequency</string>
    <string name="text5">Daily</string>
    <string name="text6">Weekly</string>
    <string name="text7">Monthly</string>
    <string name="text8">Weight Goal</string>
    <string name="text9">Calorie Goal</string>
    <string name="text10">Steps Goal</string>
    <string name="goalHeading">Enter Goal</string>


    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCGLn_w9x11JVAXa0kGB9lpGDYJShXDjBg</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="my_name">Conor Ryan</string>
    <string name="my_email">conor.ryan3@mycit.ie</string>

    <string name="nameInputHint">Name</string>
    <string name="phoneInputHint">Phone</string>
    <string name="ageInputHint">Age</string>
    <string name="heightInputHint">Height (cm)</string>
    <string name="weightInputHint">Weight (kg)</string>
    <string name="low_on_protein">Low on Protein</string>
    <string name="track_your_meal">Track your meal</string>

</resources>
